--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
     "cors": "^2.8.5",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
+    "multer": "^1.4.5-lts.1"
+
   }
 }
