--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "firebase-admin": "^12.0.0",
-    "multer": "^1.4.5-lts.1"
-
+    "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.17.2"
   }
 }
